# brave-core

./: chromium_presubmit_config.json5  package-lock.json  package.json
components/brave_ads/core/: BUILD.gn
components/brave_ads/core/browser/: BUILD.gn  README.md  ads_p2a.cc  ads_p2a.h  ads_service.cc  ads_service.h  ads_service_callback.h  ads_service_impl.cc  ads_service_impl.h  ads_service_mock.cc  ads_service_mock.h  ads_service_observer.h  ads_tooltips_delegate.h  bat_ads_service_factory.h  custom_notification_ad_constants.h  custom_notification_ad_feature.cc  custom_notification_ad_feature.h  device_id.cc  device_id.h  frequency_capping_helper.cc  frequency_capping_helper.h  reminder_util.cc  reminder_util.h
components/brave_ads/core/common/: brave_ads_feature.cc  brave_ads_feature.h  brave_ads_feature_unittest.cc  custom_notification_ad_constants.h  custom_notification_ad_feature.cc  custom_notification_ad_feature.h  notification_ad_constants.h  notification_ad_feature.cc  notification_ad_feature.h  notification_ad_feature_unittest.cc  pref_names.cc  pref_names.h  search_result_ad_feature.cc  search_result_ad_feature.h  search_result_ad_feature_unittest.cc  user_attention_feature.cc  user_attention_feature.h  user_attention_feature_unittest.cc
components/brave_ads/core/internal/: BUILD.gn  ad_type.cc  ads_client_helper.cc  ads_client_helper.h  ads_client_mock.h  ads_client_notifier.cc  ads_client_notifier_observer.cc  ads_client_notifier_unittest.cc  ads_impl.cc  ads_impl.h  brave_ads_feature.cc  brave_ads_feature_unittest.cc  mock_ads_client_notifier_observer.h
components/brave_ads/core/public/: BUILD.gn  ad_content_info.h  ad_content_value_util.h  ad_event_history.h  ad_type.h  ads.h  ads_callback.h  ads_client.h  ads_client_callback.h  ads_client_notifier.h  ads_client_notifier_observer.h  brave_ads_feature.h  category_content_info.h  category_content_value_util.h  database.h  flags_util.h  history_filter_types.h  history_item_info.h  history_item_value_util.h  history_sort_types.h  inline_content_ad_constants.h  inline_content_ad_info.h  inline_content_ad_value_util.h  new_tab_page_ad_constants.h  new_tab_page_ad_info.h  new_tab_page_ad_value_util.h  notification_ad_constants.h  (+9 more)
(+806 files in other folders)
